update consultations with pricing section

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
     <div class="land-image parallax hide-mobile"></div>
     <div class="about-container">
         <h2 class="section-header">Land</h2>
-        <p>I bought my first van in 2020 at the very beginning of the Covid-19 pandemic and built it out on a very small budget. After building Vanny I drove all the way from Michigan to Seattle and lived there for 6 months before moving into the van full time and hitting the road for good. In Septemer 2021 I decided to invest in a newer, bigger Ram Proamster and build it out with a much bigger budget, Vanny 2 was completed in October 2022 and I moved in, drove to Maine, and roadtripped all the way around the US until I got to California. Since then I've been living in my van in the winter and my boat in the summer and traveling all over North America and even Mexico!
+        <p>I bought my first van in 2020 at the very beginning of the Covid-19 pandemic and built it out on a very small budget. After building Vanny I drove all the way from Michigan to Seattle and lived there for 6 months before moving into the van full time and hitting the road for good. In Septemer 2021 I decided to invest in a newer, bigger Ram Proamster and build it out with a much bigger budget, Vanny 2 was completed in October 2022 and I moved in, drove to Maine, and roadtripped all the way around the US until I got to California. Since then I've been living in my van in the winter and my boat in the summer and traveling all over North America, Canada, and Baja Mexico!
         </p>
     </div>
     <hr class="divider hide-desktop">
