--- a/consultVan.html
+++ b/consultVan.html
@@ -83,24 +83,21 @@
         <button type="button" class="collapsible">Personalized solutions</button>
           <div class="collapsible-content">
             <p>There's no one-size-fits-all when it comes to vanlife. Whether you're drawn to minimalism or need more space for work and hobbies, I'll help you customize a van that fits your needs and budget.</p>
-            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
           <button type="button" class="collapsible">Actionable steps</button>
           <div class="collapsible-content">
             <p>When you reach out for advice you need real solutions. I provide you with actionble steps for you to take to achieve your dream whether thats building your first van or adding a new feature into your current home. I dont leave you hanging with vague advice.</p>
-            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
           <button type="button" class="collapsible">Experience based advice</button>
           <div class="collapsible-content">
             <p>With years of experience living on the road and building multiple vans I understand what works, and what doesn't. I'm here to share my experience and give you tips that makes life on the road easier, from power and plumbing to unique pet-friendly solutions.</p>
-            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
           </div>
       </div>
     </div>
     <div class="history-container">
       <div class="history-left">
         <h1>How can I help?</h1>
-        <p>I’ve been living on the road for over three years with experiences in two vans and a vintage boat. Whether you’re dreaming of hitting the road or need help with your current van, I’m here to guide you through every step.<span class="hide-desktop" id="dots">...</span><span class="hide-desktop" id="more">
+        <p>I’ve been living on the road for over four years with experiences in two vans and a vintage boat. Whether you’re dreaming of hitting the road or need help with your current van, I’m here to guide you through the entire process from start to finish.<span class="hide-desktop" id="dots">...</span><span class="hide-desktop" id="more">
         <br>
         <br>
         I’ve tackled a range of van builds, from budget-friendly to luxurious, and I bring a unique set of skills to the table. With hands-on experience in cabinet building and a deep understanding of tiny home living, I can help you design a van that’s not only stylish but also durable and practical. My journey has taught me what works, what doesn’t, and how to make the most of small spaces.
@@ -116,6 +113,21 @@
       </div>
       <div class="history-right">
         <img src="/img/Consultations/vanbuild.jpg" alt="">
+      </div>
+    </div>
+    <div class="rates-container">
+      <h1>Rates and Services</h1>
+      <div class="rateinfo">
+        <div class="rateinfo-center">
+          <h2>Consultation Call: $50</h2>
+          <p>1:1 call to discuss your needs and answer questions you might have about vanlife!</p>
+        </div>
+      </div>
+      <div class="services-container">
+        <p>Understand your systems</p>
+        <p>Brainstorm solutions</p>
+        <p>Build Confidence</p>
+        <p>Get on the Road</p>
       </div>
     </div>
     <div class="consult-contact">
