--- a/consultWeb.html
+++ b/consultWeb.html
@@ -92,23 +92,19 @@
       <div class="web-container">
         <button type="button" class="collapsible">Start With Confidence</button>
           <div class="collapsible-content">
-              Building a website can feel overwhelming. I specialize in helping those with little to no experience in web design get their first website up and running - whether you're starting from scratch or need help enhancing your current site.</p>
-            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
+            <p>Building a website can feel overwhelming. I specialize in helping those with little to no experience in web design get their first website up and running - whether you're starting from scratch or need help enhancing your current site.</p>
           </div>
           <button type="button" class="collapsible">Subscription-free Solutions</button>
           <div class="collapsible-content">
-            I offer guidance on setting up a basic HTML static site, which eliminates the need for monthly subscription fees on sites like Squarespace. This means you can have a professional, functional site that's completley under your control and scalable as your business or personal brand grows.</p>
-            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
+            <p>I offer guidance on setting up a basic HTML static site, which eliminates the need for monthly subscription fees on sites like Squarespace. This means you can have a professional, functional site that's completley under your control and scalable as your business or personal brand grows.</p>
           </div>
           <button type="button" class="collapsible">Tailored to Your Needs</button>
           <div class="collapsible-content">
-            Whether you need help creating your site's structure, integrating Canva designs, or simply understanding the basics of web design, I'm here to make the process as smooth and stress-free as possible.</p>
-            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
+            <p>Whether you need help creating your site's structure, integrating Canva designs, or simply understanding the basics of web design, I'm here to make the process as smooth and stress-free as possible.</p>
           </div>
           <button type="button" class="collapsible">Build Now, Scale Later</button>
           <div class="collapsible-content">
-            I'll show you how to build a solid foundation that you can easily expand on as your audience or services grow. You'll have the flexibility to add new features, content, and pages over time wtihout needing to overhaul the entier site or commit to expensive upgrades.</p>
-            <button type="button" class="booking-button"><a href="contact.html">Book your consultation</a></button>
+            <p>I'll show you how to build a solid foundation that you can easily expand on as your audience or services grow. You'll have the flexibility to add new features, content, and pages over time wtihout needing to overhaul the entier site or commit to expensive upgrades.</p>
           </div>
       </div>
     </div>
@@ -134,6 +130,25 @@
       </div>
       <div class="history-right">
         <img src="/img/Consultations/profilePic.jpg" alt="">
+      </div>
+    </div>
+    <div class="rates-container">
+      <h1>Rates and Services</h1>
+      <div class="rateinfo">
+        <div class="rateinfo-left">
+          <h2>Consultation Call: $50</h2>
+          <p>1:1 call to discuss your needs and answer questions you might have about your website design and functionality.</p>
+        </div>
+        <div class="rateinfo-right">
+          <h2>Web development</h2>
+          <p>Get a Custom Quote Today! Schedule a consultation to discuss your specific goals and requirements, and we'll provide a tailored quote for the services you need.</p>
+        </div>
+      </div>
+      <div class="services-container">
+        <p>Build your website from scratch</p>
+        <p>Update an existing website</p>
+        <p>UX design</p>
+        <p>Assistance with Squarespace sites</p>
       </div>
     </div>
     <div class="consult-contact">
