--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="about-container">
         <div class="about-section">
             <div class="about-text">
-                <h3>Hi there, I'm Anjali.</h3>
+                <h3>Hi I'm Anjali</h3>
                 <br>
                 <p>I'm a Michigan based digital nomad who lives and travels in my self converted Promaster Van and vintage boat. I explore with my two dogs Theo and Remi and share my stories of solo travel, DIY building, and tiny living.</p>
                 <br>
