add subject line in contact form

--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,12 @@
                 <input type="hidden" name="access_key" value="b2fe3b29-1ab3-4600-b302-099a3314a0b0">
                 <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
                 <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
+                <select type="subject" name="subject" class="contact-inputs">
+                    <option value="Other">Reason for Contact</option>
+                  <option value="webConsult">Website Consultation</option>
+                  <option value="vanConsult">Vanlife Consultation</option>
+                  <option value="contentcreation">Collaborations</option>
+                </select>
                 <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
                 <button type="submit">Submit</button>
             </form>
