add contact subject for consultation pages

--- a/consultVan.html
+++ b/consultVan.html
@@ -137,6 +137,7 @@
             <p>Send me a message</p>
         </div>
         <input type="hidden" name="access_key" value="b2fe3b29-1ab3-4600-b302-099a3314a0b0">
+        <input type="hidden" name="subject" value="vanlife-consultation">
         <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
         <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
         <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
