--- a/about.html
+++ b/about.html
@@ -73,17 +73,17 @@
     <div class="about-container">
         <h2 class="section-header">Roadless Journeys LLC</h3>
             <h3>Content Creation</h3>
-            <p>One of my favorite parts of the nomadic lifestyle that I live is that I have been able to capture and share amazing experiences with my online community. While growing a strong and trusting audience I have had the pleasure of working with some great brands that I love and truly believe in. I am always looking to share products with my audience to make their vanlife journey more smooth and enjoyable. 
-            <br><button type="button" class="booking-button"><a href="/mediakit.html">View my media kit</a></button></p>
+            <p>One of my favorite parts of the nomadic lifestyle that I live is that I have been able to capture and share amazing experiences with my online community. While growing a strong and trusting audience I have had the pleasure of working with some great brands that I love and truly believe in. I am always looking to share products with my audience to make their vanlife journey more smooth and enjoyable.</p>
+            <br><button type="button" class="booking-button"><a href="/mediakit.html">View my media kit</a></button>
             <br><br>
             <h3>Website Consultations</h3>
-            <p>Though I left my job at Amazon and didn't have plans to go back into the tech game, I have re-discovered an enjoyment for the development process and even more than that - I have found a purpose that I am truly passionate about in this area. I love to help small businesses and individuals create their own websites that can be fully custom without paying a subscirption fee. I'm so excited to have found a good use for my experience and I can't wait to help more people set up their website!
-            <br><button type="button" class="booking-button"><a href="/consultWeb.html">More about website consultations</a></button></p>
+            <p>Though I left my job at Amazon and didn't have plans to go back into the tech game, I have re-discovered an enjoyment for the development process and even more than that - I have found a purpose that I am truly passionate about in this area. I love to help small businesses and individuals create their own websites that can be fully custom without paying a subscirption fee. I'm so excited to have found a good use for my experience and I can't wait to help more people set up their website!</p>
+            <br><button type="button" class="booking-button"><a href="/consultWeb.html">More about website consultations</a></button>
             <br><br>
             <h3>Vanlife Consultations</h3>
-            <p>Another aspect of my business is vanlife consultations, I absolutley love this part of what I do because I can help people acheive this beautiful life we get on the road. I have personally build 3 vans by myself from budget to luxury and have learned so much about the process that I can share. In addition to building vans, I have lived in different vans/tiny homes for the past 3 years and I know the pain and pleasure points that many experience, I aim to help people who are new to vanlife or just looking for support during their journey.
+            <p>Another aspect of my business is vanlife consultations, I absolutley love this part of what I do because I can help people acheive this beautiful life we get on the road. I have personally build 3 vans by myself from budget to luxury and have learned so much about the process that I can share. In addition to building vans, I have lived in different vans/tiny homes for the past 3 years and I know the pain and pleasure points that many experience, I aim to help people who are new to vanlife or just looking for support during their journey.</p>
             <br><button type="button" class="booking-button"><a href="/consultVan.html">More about vanlife consultations</a></button>
-            </p>
+            
     </div>   
 
     <footer class="footer">
