update hamburger menu

--- a/about.html
+++ b/about.html
@@ -19,7 +19,11 @@
                 <nav>
                     <div><a href="index.html">Home</a></div>
                     <div><a href="about.html">About Me</a></div>
-                    <div><a href="consultations.html">Consultations</a></div>
+                    <button class="dropdown-btn">Consultations</button>
+                    <div class="dropdown-container">
+                        <a href="consultVan.html">Vanlife</a>
+                        <a href="consultWeb.html">Website Development</a>
+                    </div>
                     <div><a href="mediakit.html">Media Kit</a></div>
                     <div><a href="contact.html">Contact</a></div>
                 </nav>
@@ -47,42 +51,39 @@
         </p>
         <hr>
     </div>
-    <hr class="divider hide-desktop">
-    <div class="land-image parallax hide-mobile"></div>
+    <div class="land-image parallax"></div>
     <div class="about-container">
         <h2 class="section-header">Land</h2>
         <p>I bought my first van in 2020 at the very beginning of the Covid-19 pandemic and built it out on a very small budget. After building Vanny I drove all the way from Michigan to Seattle and lived there for 6 months before moving into the van full time and hitting the road for good. In Septemer 2021 I decided to invest in a newer, bigger Ram Proamster and build it out with a much bigger budget, Vanny 2 was completed in October 2022 and I moved in, drove to Maine, and roadtripped all the way around the US until I got to California. Since then I've been living in my van in the winter and my boat in the summer and traveling all over North America, Canada, and Baja Mexico!
         </p>
     </div>
-    <hr class="divider hide-desktop">
-    <div class="sea-image parallax hide-mobile"></div>
+    <div class="sea-image parallax"></div>
     <div class="about-container">
         <h2 class="section-header">Sea</h2>
         <p>In the summer of 2021 I made the decision to add a boat to my list of tiny homes. I purchased a 1972 Uniflite Sport Sedan and made my new home in a slip in Lake Michigan. Boatlife is very similar to vanlife so the transition was easy, I especially loved that I was always near the beach (my dogs' favorite place too) and close enough to my family in Michigan. While my future plans for the boat are unclear, I am constantly working on little projects to update the interior and practice my solo boating skills. I would love to upgrade one day to a sailboat and take if from Lake Michigan out to the Atlantic Ocean and who knows where else! Boaty has really ignited a love for antique restoration and I hope to one day bring it to its full potential as a gorgeous historic boat.
         </p>
     </div>
-    <hr class="divider hide-desktop">
-    <div class="air-image parallax hide-mobile"></div>
+    <div class="air-image parallax"></div>
     <div class="about-container">
         <h2 class="section-header">Air</h3>
         <p>In my sophomore year of college I learned about general aviation and was very eager to start my path to being a pilot. Over the years I flew here and there and earned my private pilots license in 2020 - my senior year and right before driving away in my van. Flying while travleing is pretty difficult and very expensive so it was put on the back burner for a couple years until this Summer when I drove up to Alaska and completed my Instrument Pilot rating! Alaska openeed my eyes to the wide range of possibilities for professional pilots beyond the airlines. Now my plans include earning my float rating, learning to fly on skis, and going for my commerial licesne when I have the hours. Flying brings me so much joy and I can't wait for the day that I call it my career!
         </p>
     </div>
-    <hr class="divider hide-desktop">
-    <div class="roadless-image parallax hide-mobile"></div>
+    <!-- <hr class="divider hide-desktop"> -->
+    <div class="roadless-image parallax"></div>
     <div class="about-container">
         <h2 class="section-header">Roadless Journeys LLC</h3>
             <h3>Content Creation</h3>
             <p>One of my favorite parts of the nomadic lifestyle that I live is that I have been able to capture and share amazing experiences with my online community. While growing a strong and trusting audience I have had the pleasure of working with some great brands that I love and truly believe in. I am always looking to share products with my audience to make their vanlife journey more smooth and enjoyable.</p>
-            <br><button type="button" class="booking-button"><a href="/mediakit.html">View my media kit</a></button>
+            <br><button type="button" class="booking-button"><a href="/mediakit.html">View Media Kit</a></button>
             <br><br>
             <h3>Website Consultations</h3>
             <p>Though I left my job at Amazon and didn't have plans to go back into the tech game, I have re-discovered an enjoyment for the development process and even more than that - I have found a purpose that I am truly passionate about in this area. I love to help small businesses and individuals create their own websites that can be fully custom without paying a subscirption fee. I'm so excited to have found a good use for my experience and I can't wait to help more people set up their website!</p>
-            <br><button type="button" class="booking-button"><a href="/consultWeb.html">More about website consultations</a></button>
+            <br><button type="button" class="booking-button"><a href="/consultWeb.html">Learn More</a></button>
             <br><br>
             <h3>Vanlife Consultations</h3>
             <p>Another aspect of my business is vanlife consultations, I absolutley love this part of what I do because I can help people acheive this beautiful life we get on the road. I have personally build 3 vans by myself from budget to luxury and have learned so much about the process that I can share. In addition to building vans, I have lived in different vans/tiny homes for the past 3 years and I know the pain and pleasure points that many experience, I aim to help people who are new to vanlife or just looking for support during their journey.</p>
-            <br><button type="button" class="booking-button"><a href="/consultVan.html">More about vanlife consultations</a></button>
+            <br><button type="button" class="booking-button"><a href="/consultVan.html">Learn More</a></button>
             
     </div>   
 
@@ -112,5 +113,6 @@
       </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="script/mobile-dropdown.js"></script>
 </body>
 </html>
