--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,11 @@
             <nav>
                 <div><a href="index.html">Home</a></div>
                 <div><a href="about.html">About Me</a></div>
-                <div><a href="consultations.html">Consultations</a></div>
+                <button class="dropdown-btn">Consultations</button>
+                    <div class="dropdown-container">
+                        <a href="consultVan.html">Vanlife</a>
+                        <a href="consultWeb.html">Website Development</a>
+                    </div>
                 <div><a href="mediakit.html">Media Kit</a></div>
                 <div><a href="contact.html">Contact</a></div>
             </nav>
@@ -119,5 +123,6 @@
       </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="script/mobile-dropdown.js"></script>
 </body>
 </html>
