--- a/contact.html
+++ b/contact.html
@@ -5,44 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/contact.css">
+    <script src="script/header-component.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <header>
-        <label class="hide-desktop hamburger-menu">
-            <input type="checkbox">
-        </label> 
-        <aside class="sidebar hide-desktop">
-            <nav>
-                <div><a href="index.html">Home</a></div>
-                <div><a href="about.html">About Me</a></div>
-                <button class="dropdown-btn">Consultations</button>
-                    <div class="dropdown-container">
-                        <a href="consultVan.html">Vanlife</a>
-                        <a href="consultWeb.html">Website Development</a>
-                    </div>
-                <div><a href="mediakit.html">Media Kit</a></div>
-                <div><a href="contact.html">Contact</a></div>
-            </nav>
-        </aside>
-        <nav>
-            <div class="hide-mobile" id="nav">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Me</a>
-                <div class="dropdown">
-                  <button class="dropbtn"><a href="consultations.html">Consultations</a></button>
-                  <div class="dropdown-content">
-                    <a href="consultVan.html">Vanlife</a>
-                    <a href="consultWeb.html">Website Development</a>
-                  </div>
-                </div>
-                <a href="mediakit.html">Media Kit</a>
-                <a href="contact.html">Contact</a>
-              </div>
-        </nav>
-    </header>
+    <header-component></header-component>
     <div class="section-header">
         <br>
       <h1>Get In Touch</h1>
