--- a/index.html
+++ b/index.html
@@ -4,45 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name='impact-site-verification' value='7385b459-e795-401b-8cd3-d1dab2e30e8e'>
     <title>Anjali Justice</title>
     <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
+    <script src="script/header-component.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <header>
-        <label class="hide-desktop-nav hamburger-menu">
-            <input type="checkbox">
-        </label> 
-        <aside class="sidebar hide-desktop-nav">
-            <nav>
-                <div><a href="index.html">Home</a></div>
-                <div><a href="about.html">About Me</a></div>
-                <button class="dropdown-btn">Consultations</button>
-                    <div class="dropdown-container">
-                        <a href="consultVan.html">Vanlife</a>
-                        <a href="consultWeb.html">Website Development</a>
-                    </div>
-                <div><a href="mediakit.html">Media Kit</a></div>
-                <div><a href="contact.html">Contact</a></div>
-            </nav>
-        </aside>
-        <nav>
-            <div class="hide-mobile-nav" id="nav">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Me</a>
-                <div class="dropdown">
-                  <button class="dropbtn"><a href="consultations.html">Consultations</a></button>
-                  <div class="dropdown-content">
-                    <a href="consultVan.html">Vanlife</a>
-                    <a href="consultWeb.html">Website Development</a>
-                  </div>
-                </div>
-                <a href="mediakit.html">Media Kit</a>
-                <a href="contact.html">Contact</a>
-              </div>
-        </nav>
-    </header>
+    <header-component></header-component>
 
     <div class="picture-container">
         <div class="picture-container-text">
@@ -104,9 +73,6 @@
         </ul>
         <p>2023 Anjali Justice | All Rights Reserved</p>
       </footer>
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="script/mobile-dropdown.js"></script>
 
 </body>
 </html>
