--- a/links.html
+++ b/links.html
@@ -5,44 +5,87 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Anjali Justice</title>
+    <title>Shop Vanlife Products</title>
     <link rel="stylesheet" href="style/links.css">
-    <link rel="stylesheet" href="style/nav.css">
     <link rel="stylesheet" href="style/footer.css">
+    <script src="script/header-component.js" type="text/javascript" defer></script>
+
 </head>
 <body>
-    <header>
-        <label class="hide-desktop-nav hamburger-menu">
-            <input type="checkbox">
-        </label> 
-        <aside class="sidebar hide-desktop-nav">
-            <nav>
-                <div><a href="index.html">Home</a></div>
-                <div><a href="about.html">About Me</a></div>
-                <button class="dropdown-btn">Consultations</button>
-                    <div class="dropdown-container">
-                        <a href="consultVan.html">Vanlife</a>
-                        <a href="consultWeb.html">Website Development</a>
-                    </div>
-                <div><a href="mediakit.html">Media Kit</a></div>
-                <div><a href="contact.html">Contact</a></div>
-            </nav>
-        </aside>
-        <nav>
-            <div class="hide-mobile-nav" id="nav">
-                <a href="index.html">Home</a>
-                <a href="about.html">About Me</a>
-                <div class="dropdown">
-                  <button class="dropbtn"><a href="consultations.html">Consultations</a></button>
-                  <div class="dropdown-content">
-                    <a href="consultVan.html">Vanlife</a>
-                    <a href="consultWeb.html">Website Development</a>
-                  </div>
-                </div>
-                <a href="mediakit.html">Media Kit</a>
-                <a href="contact.html">Contact</a>
-              </div>
-        </nav>
-    </header>
-    <!-- Make UI, I think maybe 3 main buttons to organize links into categories, and then click into the categories to find specific items. -->
+  <div class="content">
+    <header-component></header-component>
+  </div>
+    <div class="links-container">
+      <h1>Shop My Build</h1>
+      <div class="build-links">
+        <div class="link-card">
+          <h3>Electrical</h3>
+          <a href="/electricalLinks.html"><img src="/img/Links/electricalThumb.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Plumbing</h3>
+          <a href="/plumbingLinks.html"><img src="/img/Links/plumbingThumb.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Cabinetry</h3>
+          <a href="/cabinetryLinks.html"><img src="/img/Links/carpentryThumb.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Propane</h3>
+          <a href="/propaneLinks.html"><img src="/img/Links/propaneThumb.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Building Materials</h3>
+          <a href="/buildingMaterialsLinks.html"><img src="/img/Links/buildingMaterialsThumb.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Tools</h3>
+          <a href="/toolsLinks.html"><img src="https://m.media-amazon.com/images/I/A1HUjYkYHNL._AC_SX679_.jpg" alt=""></a>
+        </div>
+      </div>
+
+      <h1>Vanlife Favorites</h1>
+      <div class="vanlife-links">
+        <div class="link-card">
+          <h3>Tech</h3>
+          <a href="/techLinks.html"><img src="https://m.media-amazon.com/images/I/610oseltSPL._AC_SX679_.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Home Goods</h3>
+          <a href="/homeGoodsLinks.html"><img src="https://m.media-amazon.com/images/I/61HjGUkAI-L._AC_SX679_.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Dogs</h3>
+          <a href="/dogLinks.html"><img src="img/Links/dogsThumb.jpg" alt=""></a>
+        </div>
+        <div class="link-card">
+          <h3>Outdoor Gear</h3>
+          <a href="/outdoorLinks.html"><img src="img/Links/outdoorThumb.jpg" alt=""></a>
+        </div>
+      </div>
+      
+      <h1>Partnership Discounts</h1>
+      <div class="partner-links"> 
+        <div class="link-card">
+          <h3>Mobile Pixels</h3>
+          <a href="https://bit.ly/3CiwZvi"><img src="img/Links/mobilePixelsThumb.jpg" alt=""></a>
+          <p>Some discount here</p>
+        </div>
+        <div class="link-card">
+          <h3>AeroPress</h3>
+          <a href="https://aeropress.com/ANJALIJUSTICE"><img src="https://aeropress.com/cdn/shop/files/Go_Plus_hero_shot_Black_1_1_700x.png?v=1719948940" alt=""></a>
+          <p>20% off select purchases</p>
+        </div>
+        <div class="link-card">
+          <h3>Starlink</h3>
+          <a href="https://www.starlink.com/residential?referral=RC-2185395-23624-65&app_source=share"><img src="img/Links/starlinkThumb.jpg" alt=""></a>
+          <p>Free Month of Service</p>
+        </div>
+        <div class="link-card">
+          <h3>MoonShade</h3>
+          <a href="https://moonfab.com?sca_ref=7125622.skVMmhr40miwgl6K"><img src="img/Links/moonShadeThumb.jpg" alt=""></a>
+          <p>$30 off using code ANJ30</p>
+        </div>
+      </div>
+    </div>
   </body>
