add footer component

--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Me</title>
-    <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/contact.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
+    <script src="script/footer-component.js" type="text/javascript" defer></script>
 </head>
 <body>
     <header-component></header-component>
@@ -65,32 +65,8 @@
             </div>
         </div>
     </section>
-    <footer class="footer">
-        <ul class="footer-social-icon">
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://instagram.com/anjalijustice">
-                <ion-icon name="logo-instagram"></ion-icon>
-                </a></li>
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://youtube.com/@anjalijustice">
-                <ion-icon name="logo-youtube"></ion-icon>
-                </a></li>
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://pinterest.com/anjalijustice">
-                <ion-icon name="logo-pinterest"></ion-icon>
-                </a></li>
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://facebook.com/anjalijusticevanlife">
-                <ion-icon name="logo-facebook"></ion-icon>
-                </a></li>
-        </ul>
-        <ul class="menu">
-          <li class="menu__item"><a class="menu__link" href="/index.html">Home</a></li>
-          <li class="menu__item"><a class="menu__link" href="/blog.html">Blog</a></li>
-          <li class="menu__item"><a class="menu__link" href="/mediakit.html">Media Kit</a></li>
-          <li class="menu__item"><a class="menu__link" href="/contact.html">Contact</a></li>
-    
-        </ul>
-        <p>2023 Anjali Justice | All Rights Reserved</p>
-      </footer>
+    <div><footer-component></footer-component></div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="script/mobile-dropdown.js"></script>
 </body>
 </html>
