--- a/links.html
+++ b/links.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shop Vanlife Products</title>
     <link rel="stylesheet" href="style/links.css">
-    <link rel="stylesheet" href="style/footer.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
+    <script src="script/footer-component.js" type="text/javascript" defer></script>
 
 </head>
 <body>
@@ -17,6 +17,7 @@
   </div>
     <div class="links-container">
       <h1>Shop My Build</h1>
+      <p>This website contains affiliate links, meaning I may receive a commission if you make a purchase through one of our links, at no extra cost to you. All opinions expressed here are my own, and I only recommend products I believe in.</p>
       <div class="build-links">
         <div class="link-card">
           <h3>Electrical</h3>
@@ -88,4 +89,8 @@
         </div>
       </div>
     </div>
+    <div><footer-component></footer-component></div>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
+</html>
