--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Story</title>
     <link rel="stylesheet" href="style/about.css">
-    <link rel="stylesheet" href="style/footer.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
+    <script src="script/footer-component.js" type="text/javascript" defer></script>
 </head>
 <body>
     <div class="content">
@@ -17,6 +17,11 @@
     <div class="about-container">
         <p>I live in my self-converted van and travel around North America with my dogs Theo and Remi. I love to explore new places and share my stories of solo travel, DIY van building, and all the other adventures we get up to! Before starting vanlife I graduated from college with a BSE in Computer Science Engineer, then proceeded to work as a software development engineer at Amazon for a few years before leaving the job to pursue content creation and travel. Now I work with amazing brands to market their products on social media!
         </p>
+        <div class="socialLinks">
+            <a class="footer-social-icon__link" href="https://instagram.com/anjalijustice"><ion-icon             name="logo-instagram"></ion-icon></a>
+            <a class="footer-social-icon__link" href="https://tiktok.com/@anjalijustice"><ion-icon             name="logo-tiktok"></ion-icon></a>
+            <a class="footer-social-icon__link" href="https://facebook.com/anjalijusticevanlife"><ion-icon name="logo-facebook"></ion-icon></a>
+        </div>
         <hr>
     </div>
     <div class="land-image parallax"></div>
@@ -54,33 +59,8 @@
             <br><button type="button" class="booking-button"><a href="/consultVan.html">Learn More</a></button>
             
     </div>   
-
-    <footer class="footer">
-        <ul class="footer-social-icon">
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://instagram.com/anjalijustice">
-                <ion-icon name="logo-instagram"></ion-icon>
-                </a></li>
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://youtube.com/@anjalijustice">
-                <ion-icon name="logo-youtube"></ion-icon>
-                </a></li>
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://pinterest.com/anjalijustice">
-                <ion-icon name="logo-pinterest"></ion-icon>
-                </a></li>
-            <li class="footer-social-icon__item"><a class="footer-social-icon__link" href="https://facebook.com/anjalijusticevanlife">
-                <ion-icon name="logo-facebook"></ion-icon>
-                </a></li>
-        </ul>
-        <ul class="menu">
-          <li class="menu__item"><a class="menu__link" href="/index.html">Home</a></li>
-          <li class="menu__item"><a class="menu__link" href="/blog.html">Blog</a></li>
-          <li class="menu__item"><a class="menu__link" href="/mediakit.html">Media Kit</a></li>
-          <li class="menu__item"><a class="menu__link" href="/contact.html">Contact</a></li>
-    
-        </ul>
-        <p>2023 Anjali Justice | All Rights Reserved</p>
-      </footer>
+    <div><footer-component></footer-component></div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="script/mobile-dropdown.js"></script>
 </body>
 </html>
