--- a/buildingMaterialsLinks.html
+++ b/buildingMaterialsLinks.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Building Materials Links</title>
     <link rel="stylesheet" href="style/links.css">
-    <link rel="stylesheet" href="style/footer.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
+    <script src="script/footer-component.js" type="text/javascript" defer></script>
 </head>
 <body>
   <div>
@@ -75,4 +75,8 @@
       </div> -->
     </div>
   </div>
+  <div><footer-component></footer-component></div>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+</html>
