move link pages into folder

--- a/links.html
+++ b/links.html
@@ -21,27 +21,27 @@
       <div class="build-links">
         <div class="link-card">
           <h3>Electrical</h3>
-          <a href="/electricalLinks.html"><img src="/img/Links/electricalThumb.jpg" alt=""></a>
+          <a href="linkPages/electricalLinks.html"><img src="/img/Links/electricalThumb.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Plumbing</h3>
-          <a href="/plumbingLinks.html"><img src="/img/Links/plumbingThumb.jpg" alt=""></a>
+          <a href="linkPages/plumbingLinks.html"><img src="/img/Links/plumbingThumb.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Cabinetry</h3>
-          <a href="/cabinetryLinks.html"><img src="/img/Links/carpentryThumb.jpg" alt=""></a>
+          <a href="linkPages/cabinetryLinks.html"><img src="/img/Links/carpentryThumb.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Propane</h3>
-          <a href="/propaneLinks.html"><img src="/img/Links/propaneThumb.jpg" alt=""></a>
+          <a href="linkPages/propaneLinks.html"><img src="/img/Links/propaneThumb.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Building Materials</h3>
-          <a href="/buildingMaterialsLinks.html"><img src="/img/Links/buildingMaterialsThumb.jpg" alt=""></a>
+          <a href="linkPages/buildingMaterialsLinks.html"><img src="/img/Links/buildingMaterialsThumb.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Tools</h3>
-          <a href="/toolsLinks.html"><img src="https://m.media-amazon.com/images/I/A1HUjYkYHNL._AC_SX679_.jpg" alt=""></a>
+          <a href="linkPages/toolsLinks.html"><img src="https://m.media-amazon.com/images/I/A1HUjYkYHNL._AC_SX679_.jpg" alt=""></a>
         </div>
       </div>
 
@@ -49,19 +49,19 @@
       <div class="vanlife-links">
         <div class="link-card">
           <h3>Tech</h3>
-          <a href="/techLinks.html"><img src="https://m.media-amazon.com/images/I/610oseltSPL._AC_SX679_.jpg" alt=""></a>
+          <a href="linkPages/techLinks.html"><img src="https://m.media-amazon.com/images/I/610oseltSPL._AC_SX679_.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Home Goods</h3>
-          <a href="/homeGoodsLinks.html"><img src="https://m.media-amazon.com/images/I/61HjGUkAI-L._AC_SX679_.jpg" alt=""></a>
+          <a href="linkPages/homeGoodsLinks.html"><img src="https://m.media-amazon.com/images/I/61HjGUkAI-L._AC_SX679_.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Dogs</h3>
-          <a href="/dogLinks.html"><img src="img/Links/dogsThumb.jpg" alt=""></a>
+          <a href="linkPages/dogLinks.html"><img src="img/Links/dogsThumb.jpg" alt=""></a>
         </div>
         <div class="link-card">
           <h3>Outdoor Gear</h3>
-          <a href="/outdoorLinks.html"><img src="img/Links/outdoorThumb.jpg" alt=""></a>
+          <a href="linkPages/outdoorLinks.html"><img src="img/Links/outdoorThumb.jpg" alt=""></a>
         </div>
       </div>
       
