--- a/linkPages/dogLinks.html
+++ b/linkPages/dogLinks.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dog Links</title>
-    <link rel="stylesheet" href="style/links.css">
+    <link rel="stylesheet" href="/style/links.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
     <script src="script/footer-component.js" type="text/javascript" defer></script>
 </head>
 <body>
   <div>
     <header-component></header-component>
-    <div class="back-button hide-mobile"><button type="button" onclick="document.location='links.html'">⬅</button></div>
+    <div class="back-button hide-mobile"><button type="button" onclick="document.location='/links.html'">⬅</button></div>
   </div>
   <h1>Dog Products</h1>
   <div class="links-container">
