link page updates, mostly style

--- a/linkPages/toolsLinks.html
+++ b/linkPages/toolsLinks.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tools Links</title>
     <link rel="stylesheet" href="/style/links.css">
-    <script src="script/header-component.js" type="text/javascript" defer></script>
-    <script src="script/footer-component.js" type="text/javascript" defer></script>
+    <script src="/script/header-component.js" type="text/javascript" defer></script>
+    <script src="/script/footer-component.js" type="text/javascript" defer></script>
 </head>
 <body>
   <div>
     <header-component></header-component>
     <div class="back-button hide-mobile"><button type="button" onclick="document.location='/links.html'">⬅</button></div>
   </div>
-  <h1>Tools</h1>
-  <div class="links-container">
+  <div class="links-container inner-page">
+    <h1>Tools</h1>
     <div class="build-links">
       <div class="link-card electrical-link">
         <p>BOSCH 5-in-1 Drill</p>
