--- a/linkPages/electricalLinks.html
+++ b/linkPages/electricalLinks.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Electrical Links</title>
     <link rel="stylesheet" href="/style/links.css">
-    <script src="script/header-component.js" type="text/javascript" defer></script>
-    <script src="script/footer-component.js" type="text/javascript" defer></script>
+    <script src="/script/header-component.js" type="text/javascript" defer></script>
+    <script src="/script/footer-component.js" type="text/javascript" defer></script>
 </head>
 <body>
   <div>
     <header-component></header-component>
     <div class="back-button hide-mobile"><button type="button" onclick="document.location='/links.html'">⬅</button></div>
   </div>
-  <h1>Electrical</h1>
-  <div class="links-container">
+  <div class="links-container inner-page">
+    <h1>Electrical</h1>
     <div class="build-links">
       <div class="link-card electrical-link">
         <p>Renogy 2000W Pure Sine Inverter</p>
@@ -65,10 +65,10 @@
         <p>Transfer Switch</p>
         <a href="https://amzn.to/40Wagj0"><img src="https://m.media-amazon.com/images/I/41-bXIuogAL._AC_SX679_.jpg" alt=""></a>
       </div>
-      <div class="link-card electrical-link">
+      <!-- <div class="link-card electrical-link">
         <p>Add links for shower electrical here</p>
         <a href=""><img src="" alt=""></a>
-      </div>
+      </div> -->
       <div class="link-card electrical-link">
         <p>12V Dimmer Switch</p>
         <a href="https://amzn.to/4g2DQrh"><img src="https://m.media-amazon.com/images/I/51a+3N9Bt3L._AC_SX679_.jpg" alt=""></a>
