add wilderdog affiliate links

--- a/linkPages/dogLinks.html
+++ b/linkPages/dogLinks.html
@@ -35,15 +35,15 @@
       </div>
       <div class="link-card electrical-link">
         <p>Waterproof Sherpa Blanket</p>
-        <a href="https://amzn.to/3CVbjpa"><img src="https://m.media-amazon.com/images/I/91+7wxsdNQL._AC_SX679_.jpg" alt=""></a>
+        <a href="https://www.avantlink.com/click.php?tool_type=cl&merchant_id=6c8cef26-22fc-4624-a6d6-ab06aff27d36&website_id=70e506e6-6cf5-4ac0-a383-f4a4b39ca1ee&url=https%3A%2F%2Fwww.wilderdog.com%2Fcollections%2Fwaterproof-gear%2Fproducts%2Fsherpa-fleece-waterproof-blanket%3Fvariant%3D41498797867181"><img src="https://m.media-amazon.com/images/I/91+7wxsdNQL._AC_SX679_.jpg" alt=""></a>
       </div>
       <div class="link-card electrical-link">
         <p>Wilderdog Utility Fanny Pack</p>
-        <a href="https://amzn.to/4122O60"><img src="https://m.media-amazon.com/images/I/81rZtYTHkZL._AC_SX679_.jpg" alt=""></a>
+        <a href="https://www.avantlink.com/click.php?tool_type=cl&merchant_id=6c8cef26-22fc-4624-a6d6-ab06aff27d36&website_id=70e506e6-6cf5-4ac0-a383-f4a4b39ca1ee&url=https%3A%2F%2Fwww.wilderdog.com%2Fcollections%2Fall-products%2Fproducts%2Futility-pack%3Fvariant%3D41051760754861"><img src="https://m.media-amazon.com/images/I/81rZtYTHkZL._AC_SX679_.jpg" alt=""></a>
       </div>
       <div class="link-card electrical-link">
         <p>Waterproof Collar</p>
-        <a href="https://amzn.to/3ZmNi3i"><img src="https://m.media-amazon.com/images/I/51RdYNukeOL._AC_SY879_.jpg" alt=""></a>
+        <a href="https://www.wilderdog.com/collections/waterproof-gear/products/orange-waterproof-collar?variant=41927426605229"><img src="https://m.media-amazon.com/images/I/51RdYNukeOL._AC_SY879_.jpg" alt=""></a>
       </div>
       <div class="link-card electrical-link">
         <p>Training E-Collars</p>
