add google analytics test

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style/main.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
     <script src="script/footer-component.js" type="text/javascript" defer></script>
+    <script src="script/google-analytics.js" type="text/javascript"></script>
 </head>
 <body>
     <header-component></header-component>
