--- a/consultations.html
+++ b/consultations.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style/consult.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
     <script src="script/footer-component.js" type="text/javascript" defer></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFSYEL50KL"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QFSYEL50KL');
+    </script>
 </head>
 <body>
     <div class="content">
