--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link rel="stylesheet" href="style/main.css">
     <script src="script/header-component.js" type="text/javascript" defer></script>
     <script src="script/footer-component.js" type="text/javascript" defer></script>
-    <script src="script/google-analytics.js" type="text/javascript"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-QFSYEL50KL"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QFSYEL50KL');
+    </script>
 </head>
 <body>
     <header-component></header-component>
